changed the font size

--- a/style.css
+++ b/style.css
@@ -1,12 +1,52 @@
+body{
+    font-size: 20px;
+}
+
 #mainContainer{
-    padding-right: 30px;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+    align-content: center;
+    justify-content: center;
 }
 
 #abstract{
    
-    padding-top:100px;
-    display: flex;
-    flex-direction: column;
-    align-content: space-around;
+    /* padding-top:100px; */
+    padding: 150px 10px 10px 10px;
+    
+}
 
+#introduction{
+    padding:40px 10px 10px 10px;
+}
+
+#methods{
+    padding: 40px 10px 10px 10px;
+}
+
+#libraries{
+    padding: 40px 10px 10px 10px;
+}
+
+#dataset{
+    padding: 40px 10px 10px 10px;
+}
+
+#svm{
+    padding: 40px 10px 10px 10px;
+}
+
+.ui.sidebar.menu .item {
+    font-size: 20px;
+    text-align: center;
+}
+h1 {
+    text-align: center;
+}
+
+#title{
+    margin-right: 250px;
+    padding: 30px;
 }
