--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body{
     font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 #mainContainer{
-    padding-left: 10px;
+    padding: 60px;
     display: flex;
     flex-direction: column;
     align-content: space-around;
@@ -15,11 +16,17 @@ body{
    
     /* padding-top:100px; */
     padding: 150px 10px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
 }
 
 #introduction{
     padding:40px 10px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #methods{
@@ -27,7 +34,10 @@ body{
 }
 
 #libraries{
-    padding: 40px 10px 10px 10px;
+    padding: 20px 10px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #dataset{
@@ -76,6 +86,9 @@ h1 {
 #title{
     margin-right: 250px;
     padding: 30px;
+    color:palevioletred;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 40px;
 }
 
 .para{
@@ -87,4 +100,7 @@ h1 {
     /* height:; */
     align-self: center;
     align-items: center;
+}
+h2{
+    font-style: italic;
 }
