--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     font-size: 20px;
     font-family: 'Courier New', Courier, monospace;
 }
-#ribbon{
+img#ribbon{
     width:30vh;
 }
 #mainContainer{
